2024-03-04T16:08:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8143313586 # 173
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-04
* notice: last 14d: unq all: 1 26
* notice: prev accum: outdated-unq outdated-all / unq all: 338 704 / 352 729
* notice: next accum: outdated-unq outdated-all / unq all: 338 704 / 352 730
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-03-04]

2024-03-04T09:25:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8138037150 # 172
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-04
* notice: last 14d: unq all: 1 25
* notice: prev accum: outdated-unq outdated-all / unq all: 338 704 / 351 728
* notice: next accum: outdated-unq outdated-all / unq all: 338 704 / 352 729
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-03-04]

2024-03-03T16:06:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8131427026 # 170
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-03
* notice: last 14d: unq all: 1 24
* notice: prev accum: outdated-unq outdated-all / unq all: 338 704 / 351 727
* notice: next accum: outdated-unq outdated-all / unq all: 338 704 / 351 728
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-03-03]

2024-03-03T08:08:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8128817872 # 169