@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-03-04T16:08:09Z",
+  "timestamp" : "2024-03-05T08:09:14Z",
   "count_outdated" : 704,
   "uniques_outdated" : 338,
-  "count" : 730,
-  "uniques" : 352,
+  "count" : 731,
+  "uniques" : 353,
   "clones" : [
     {
       "timestamp": "2024-02-20T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-03-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
