@@ -1,3 +1,12 @@
+2024-03-05T08:09:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8152956471 # 175
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-05
+* notice: last 14d: unq all: 1 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 338 704 / 352 730
+* notice: next accum: outdated-unq outdated-all / unq all: 338 704 / 353 731
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-03-05]
+
 2024-03-04T16:08:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8143313586 # 173
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-04
